fixed all bugs, no more exceptions now